# django-template

./: .dockerignore  .gitignore  Dockerfile.dev  README.md  compose.yml  entrypoint.sh  main.py  pyproject.toml
src/accounts/: admin.py  apps.py  models.py  signals.py
src/accounts/api/: auth.py
src/accounts/jwt/: auth.py  token.py
src/accounts/migrations/: 0001_initial.py  0002_user_is_verified.py  0003_vendorprofile_nickname.py  0004_remove_vendorprofile_nickname.py
src/accounts/schema/: auth.py
src/common/: account_manager.py  apps.py  base_model.py  exception_handlers.py  manager.py  otp_managers.py  schema.py  state.py
src/common/management/commands/: test_redis.py
src/common/websocket/: __init__.py  notifier.py  utils.py
src/config/: api.py  asgi.py  routers.py  settings.py  urls.py
src/middlewares/jwt/: JWTAuthMiddlewareChannels.py  auth.py  token.py
src/notifications/: admin.py  apps.py  models.py  signals.py  views.py
src/notifications/api/: notifications.py
src/notifications/consumers/: notifications.py
src/notifications/migrations/: 0001_initial.py  0002_remove_notificationpreference_in_app_and_more.py  0003_alter_notificationpreference_push.py
src/notifications/routers/: notifications.py
src/notifications/schema/: notifications.py
src/otp/: admin.py  models.py
src/otp/api/: auth.py  otp.py
src/otp/migrations/: 0001_initial.py  0002_alter_otp_otp_type.py
src/otp/schema/: otp.py
src/services/accounts/: accounts_service.py
src/services/mail/: email.py  generate_otp.py
src/services/notifications/: delivery_services.py  helpers.py  notifications_services.py
src/services/otp/: otp_service.py
src/services/tasks/accounts/: user_auth_tasks.py
src/services/twilio/: send_sms.py
src/static/: ws_notification.js
src/tasks/notifications/: broadcast_tasks.py  mail_tasks.py  sms_tasks.py
src/templates/: base.html
src/templates/mails/: otp_mail.html  signup_mail.html
src/templates/mails/notifications/: notification.html
src/templates/mails/otp/: account_delete_mail.html  account_deletion_confirmation_mail.html  account_restore_mail.html  otp_mail.html  password_reset.html  signup_mail.html
src/templates/websockets/: dashboard.html
src/tokens/: admin.py  models.py
src/tokens/jwt/: auth.py  token.py
src/tokens/migrations/: 0001_initial.py  0002_alter_trackedtoken_unique_together.py  0003_remove_trackedtoken_token_trackedtoken_access_token_and_more.py
